<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="search_button_title">Search</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_heading">Advanced search options</string>
    <string name="settings_image_size">Image Size</string>
    <string name="settings_color_filter">Color Filter</string>
    <string name="settings_image_type">Image Type</string>
    <string name="settings_site_filter">Site Filter</string>
    <string name="settings_site_filter_hint">yahoo.com</string>
    <string name="settings_done">Done</string>

</resources>
