<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textAlignment="viewEnd"
    tools:context=".Settings" >

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title_heading"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImageSize"
        android:layout_below="@+id/tvImageSize"
        android:layout_marginTop="16dp"
        android:text="@string/settings_color_filter"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvColorFilter"
        android:layout_below="@+id/tvColorFilter"
        android:layout_marginTop="16dp"
        android:text="@string/settings_image_type"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvHeading"
        android:layout_below="@+id/tvHeading"
        android:layout_marginTop="21dp"
        android:text="@string/settings_image_size"
        android:textAlignment="textEnd" />

    <Spinner
        android:id="@+id/spImageSize"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvImageSize"
        android:layout_alignRight="@dimen/activity_horizontal_margin"
        android:layout_alignTop="@+id/tvImageSize"
        android:layout_toRightOf="@+id/tvImageType"
        android:entries="@array/imageSizes" />
    
    <Spinner
        android:id="@+id/spColorFilter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvColorFilter"
        android:layout_alignRight="@dimen/activity_horizontal_margin"
        android:layout_alignTop="@+id/tvColorFilter"
        android:layout_toRightOf="@+id/tvColorFilter"
        android:entries="@array/colors" />
 
   <Spinner
       android:id="@+id/spImageType"
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/tvImageType"
       android:layout_alignRight="@dimen/activity_horizontal_margin"
       android:layout_alignTop="@+id/tvImageType"
       android:layout_toRightOf="@+id/tvImageType"
       android:entries="@array/imageTypes" />

   <TextView
       android:id="@+id/tvSiteFilter"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignRight="@+id/tvImageSize"
       android:layout_below="@+id/tvImageType"
       android:layout_marginTop="31dp"
       android:text="@string/settings_site_filter"
       android:textAlignment="textEnd" />

   <EditText
       android:id="@+id/etSiteFilter"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/tvSiteFilter"
       android:layout_alignBottom="@+id/tvSiteFilter"
       android:layout_alignLeft="@+id/spImageType"
       android:ems="10"
       android:hint="@string/settings_site_filter_hint" />

   <Button
       android:id="@+id/btnDone"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/etSiteFilter"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="24dp"
       android:onClick="onDone"
       android:text="@string/settings_done" />
    
</RelativeLayout>
